Kinda fixed sidebar calendar not being aligned + did more with day page

--- a/public_html/css/common.css
+++ b/public_html/css/common.css
@@ -16,6 +16,27 @@
     outline: none;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    visibility: hidden;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--clr-neutral-600);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--clr-neutral-600);
+}
+
+html {
+    overflow-y: scroll;
+}
+
 body {
     margin: 0;
     display: flex;
