--- a/public_html/css/topbar.css
+++ b/public_html/css/topbar.css
@@ -6,6 +6,9 @@
     width: 100vw;
     display: flex;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: var(--clr-neutral-800);
 }
 
 .logo {
